Compile code for ipad and vscode separately

--- a/widget/package.json
+++ b/widget/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "watch": "rollup --environment NODE_ENV:production --config --watch",
-    "build": "rollup --environment NODE_ENV:production --config"
+    "watchIpad": "rollup --environment NODE_ENV:production --config --watch --configIpad",
+    "watchVscode": "rollup --environment NODE_ENV:production --config --watch --configVscode"
   },
   "main": "index.js",
   "author": "Anton Kovsharov",
