--- a/widget/package.json
+++ b/widget/package.json
@@ -30,6 +30,7 @@
     "@tldraw/vec": "^1.9.2",
     "@types/react": "^18.0.28",
     "axios": "^1.3.5",
+    "cors": "^2.8.5",
     "http": "^0.0.1-security",
     "https": "^1.0.0",
     "immer": "^10.0.0",
