Seems like browser version works now

--- a/widget/tsconfig.json
+++ b/widget/tsconfig.json
@@ -9,6 +9,13 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "strict": true
+    "strict": true,
+    "baseUrl": "./",
+    "paths": {
+      "shapes": ["src/tldraw_stuff/shapes"],
+      "shapes/*": ["src/tldraw_stuff/shapes/*"],
+      "components/*": ["src/tldraw_stuff/components/*"],
+      "state/*": ["src/tldraw_stuff/state/*"]
+    }
   }
 }
