--- a/widget/package.json
+++ b/widget/package.json
@@ -17,6 +17,7 @@
     "@rollup/plugin-node-resolve": "^15.0.2",
     "@rollup/plugin-replace": "^4.0.0",
     "@rollup/plugin-typescript": "^8.3.4",
+    "@types/matter-js": "^0.18.2",
     "@types/react-dom": "^18.0.11",
     "express": "^4.18.2",
     "rollup": "^2.68.0",
@@ -34,7 +35,6 @@
     "cors": "^2.8.5",
     "http": "^0.0.1-security",
     "https": "^1.0.0",
-    "immer": "^10.0.0",
     "lodash": "^4.17.21",
     "matter-js": "^0.19.0",
     "nanoid": "^4.0.2",
