--- a/app/package.json
+++ b/app/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "paper-proof-widget",
+  "name": "paper-proof",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
+    "server": "node server.cjs",
     "watchBrowser": "rollup --environment NODE_ENV:production --config --watch --configBrowser",
-    "watchInfoview": "rollup --environment NODE_ENV:production --config --watch --configInfoview",
     "buildBrowser": "rollup --environment NODE_ENV:production --config --configBrowser",
-    "buildInfoview": "rollup --environment NODE_ENV:production --config --configInfoview"
+    "dev": "yarn server & yarn watchBrowser"
   },
   "main": "index.js",
-  "author": "Anton Kovsharov",
+  "author": "Anton Kovsharov, Evgenia Karunus",
   "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-alias": "^5.0.0",
