Move examples to the top level to avoid having 2 instances of vscode open while developing in app/ folder

--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -38,6 +38,6 @@
         "inputRev?": "main"
       }
     },
-    { "path": { "name": "PaperProof", "dir": "./../lean" } }
+    { "path": { "name": "PaperProof", "dir": "./lean" } }
   ]
 }
