--- a/app/package.json
+++ b/app/package.json
@@ -41,6 +41,7 @@
     "react-feather": "^2.0.10",
     "signia": "^0.1.4",
     "signia-react": "^0.1.4",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "usehooks-ts": "^2.9.1"
   }
 }
