--- a/app/package.json
+++ b/app/package.json
@@ -29,7 +29,7 @@
   "dependencies": {
     "@leanprover/infoview": "^0.4.2",
     "@stitches/react": "^1.2.8",
-    "@tldraw/tldraw": "^2.0.0-alpha.12",
+    "@tldraw/tldraw": "^2.0.0-canary",
     "@types/react": "^18.0.28",
     "axios": "^1.3.5",
     "cors": "^2.8.5",
