extension - switch back to `Paper Proof: Toggle`

--- a/extension/package.json
+++ b/extension/package.json
@@ -18,8 +18,8 @@
   "contributes": {
     "commands": [
       {
-        "command": "paperproof.open",
-        "title": "Paper Proof: Open"
+        "command": "paperproof.toggle",
+        "title": "Paper Proof: Toggle"
       }
     ]
   },
