Put initial info when creating webview html

--- a/extension/package.json
+++ b/extension/package.json
@@ -13,7 +13,9 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+    "onLanguage:lean4"
+  ],
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
