--- a/extension/package.json
+++ b/extension/package.json
@@ -23,7 +23,17 @@
         "command": "paperproof.toggle",
         "title": "Paper Proof: Toggle"
       }
-    ]
+    ],
+    "configuration": {
+      "title": "Paper Proof",
+      "properties": {
+        "paperproof.serverUrl": {
+          "type": "string",
+          "default": "https://paperproof.xyz",
+          "description": "The URL of the Paper Proof server"
+        }
+      }
+    }
   },
   "scripts": {
     "vscode:prepublish": "yarn run package",
