--- a/extension/package.json
+++ b/extension/package.json
@@ -33,7 +33,8 @@
           "description": "The URL of the Paper Proof server"
         }
       }
-    }
+    },
+    "icon": "./images/icon.png"
   },
   "scripts": {
     "vscode:prepublish": "yarn run package",
@@ -65,5 +66,6 @@
   "dependencies": {
     "node-fetch": "^3.3.1",
     "vscode-languageserver-protocol": "^3.17.3"
-  }
+  },
+  "license": "MIT"
 }
