--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@rollup/plugin-alias": "^5.0.0",
     "@rollup/plugin-commonjs": "^22.0.1",
+    "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.2",
     "@rollup/plugin-replace": "^4.0.0",
     "@rollup/plugin-typescript": "^8.3.4",
@@ -29,6 +30,7 @@
   "dependencies": {
     "@leanprover/infoview": "^0.4.2",
     "@stitches/react": "^1.2.8",
+    "@supabase/supabase-js": "^2.26.0",
     "@tldraw/tldraw": "^2.0.0-canary",
     "@types/react": "^18.0.28",
     "axios": "^1.3.5",
