--- a/app/package.json
+++ b/app/package.json
@@ -31,7 +31,7 @@
     "@leanprover/infoview": "^0.4.2",
     "@stitches/react": "^1.2.8",
     "@supabase/supabase-js": "^2.26.0",
-    "@tldraw/tldraw": "^2.0.0-canary.4bd8a257ac02",
+    "@tldraw/tldraw": "2.0.0-canary.e17074a8b3a6",
     "@types/react": "^18.0.28",
     "axios": "^1.3.5",
     "cors": "^2.8.5",
