extension package.json - add publisher

--- a/extension/package.json
+++ b/extension/package.json
@@ -3,9 +3,10 @@
   "displayName": "paperproof",
   "description": "Extension which queries Lean server each time cursor position changes and sends context to the web server",
   "version": "0.0.1",
+  "publisher": "paperproof",
   "repository": {
     "type": "git",
-    "url": "https://github.com/antonkov/paper-proof"
+    "url": "https://github.com/Paper-Proof/paper-proof"
   },
   "engines": {
     "vscode": "^1.78.0"
