react-zoom-pan-pinch - works

--- a/app/package.json
+++ b/app/package.json
@@ -41,6 +41,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
+    "react-zoom-pan-pinch": "^3.3.0",
     "signia": "^0.1.4",
     "signia-react": "^0.1.4",
     "url": "^0.11.0",
