--- a/app/package.json
+++ b/app/package.json
@@ -44,6 +44,8 @@
     "react-zoom-pan-pinch": "^3.3.0",
     "signia": "^0.1.4",
     "signia-react": "^0.1.4",
+    "smooth-scroll-into-view-if-needed": "^2.0.2",
+    "smoothscroll-polyfill": "^0.4.4",
     "url": "^0.11.0",
     "usehooks-ts": "^2.9.1"
   }
