--- a/app/package.json
+++ b/app/package.json
@@ -37,6 +37,7 @@
     "http": "^0.0.1-security",
     "https": "^1.0.0",
     "lodash": "^4.17.21",
+    "perfect-arrows": "^0.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
