--- a/app/package.json
+++ b/app/package.json
@@ -4,26 +4,17 @@
   "type": "module",
   "scripts": {
     "server": "node server.cjs",
-    "watchBrowser": "rollup --environment NODE_ENV:development --config --watch --configBrowser",
-    "buildBrowser": "rollup --environment NODE_ENV:development --config --configBrowser",
+    "watchBrowser": "node esbuild.config.js",
     "dev": "yarn server & yarn watchBrowser"
   },
   "main": "index.js",
   "author": "Anton Kovsharov, Evgenia Karunus",
   "license": "MIT",
   "devDependencies": {
-    "@rollup/plugin-alias": "^5.0.0",
-    "@rollup/plugin-commonjs": "^22.0.1",
-    "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.2",
-    "@rollup/plugin-replace": "^4.0.0",
-    "@rollup/plugin-typescript": "^8.3.4",
     "@types/matter-js": "^0.18.2",
     "@types/react-dom": "^18.0.11",
+    "esbuild": "^0.19.8",
     "express": "^4.18.2",
-    "postcss": "^8.4.23",
-    "rollup": "^2.68.0",
-    "rollup-plugin-postcss": "^4.0.2",
     "tslib": "^2.5.0",
     "typescript": "^5.1.6"
   },
