--- a/app/package.json
+++ b/app/package.json
@@ -11,30 +11,13 @@
   "author": "Anton Kovsharov, Evgenia Karunus",
   "license": "MIT",
   "devDependencies": {
-    "@types/matter-js": "^0.18.2",
-    "@types/react-dom": "^18.0.11",
     "esbuild": "^0.19.8",
     "express": "^4.18.2",
-    "tslib": "^2.5.0",
     "typescript": "^5.1.6"
   },
   "dependencies": {
-    "@leanprover/infoview": "^0.4.2",
-    "@stitches/react": "^1.2.8",
-    "@supabase/supabase-js": "^2.26.0",
-    "@types/react": "^18.0.28",
-    "axios": "^1.3.5",
-    "cors": "^2.8.5",
-    "http": "^0.0.1-security",
-    "https": "^1.0.0",
-    "lodash": "^4.17.21",
     "perfect-arrows": "^0.3.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-feather": "^2.0.10",
-    "signia": "^0.1.4",
-    "signia-react": "^0.1.4",
-    "url": "^0.11.0",
-    "usehooks-ts": "^2.9.1"
+    "react-dom": "^18.2.0"
   }
 }
