<Snackbar/> - add a barebones error toast

--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,9 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.1",
     "perfect-arrows": "^0.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
