--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "paper-proof",
+  "name": "paperproof",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
@@ -11,6 +11,7 @@
   "author": "Anton Kovsharov, Evgenia Karunus",
   "license": "MIT",
   "devDependencies": {
+    "@types/react-dom": "^18.2.18",
     "esbuild": "^0.19.8",
     "express": "^4.18.2",
     "typescript": "^5.1.6"
