--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/react-dom": "^18.2.18",
+    "cors": "^2.8.5",
     "esbuild": "^0.19.8",
     "express": "^4.18.2",
     "typescript": "^5.1.6"
