--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "server": "node server.cjs",
     "watchBrowser": "rollup --environment NODE_ENV:development --config --watch --configBrowser",
-    "buildBrowser": "rollup --environment NODE_ENV:development --config --configBrowser",
+    "build": "rollup --environment NODE_ENV:development --config --configBrowser",
     "dev": "yarn server & yarn watchBrowser"
   },
   "main": "index.js",
