--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,7 @@
     "server": "node server.cjs",
     "watchBrowser": "node esbuild.config.js",
     "dev": "yarn server & yarn watchBrowser",
-    "build": "mkdir dist" 
+    "build": "mkdir dist; echo '{}' > dist/index.js"
   },
   "main": "index.js",
   "author": "Anton Kovsharov, Evgenia Karunus",
