--- a/extension/package.json
+++ b/extension/package.json
@@ -2,7 +2,7 @@
   "name": "paperproof",
   "displayName": "Paperproof",
   "description": "Lean therorem proving interface which feels like pen-and-paper proofs",
-  "version": "0.0.5",
+  "version": "1.0.0",
   "publisher": "paperproof",
   "repository": {
     "type": "git",
@@ -53,7 +53,10 @@
         "paperproof.environment": {
           "type": "string",
           "default": "production",
-          "enum": ["production", "development"]
+          "enum": [
+            "production",
+            "development"
+          ]
         }
       }
     },
