Add temporary build config to deploy paperproof.xyz version

--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "scripts": {
     "server": "node server.cjs",
-    "watch": "node esbuild.config.js"
+    "watch": "node esbuild.config.js",
+    "build": "node esbuild-build.config.js"
   },
   "main": "index.js",
   "author": "Anton Kovsharov, Evgenia Karunus",
