Create a production build config to minify extension to 280kb (down from 1.5mb). React still takes ~140kb in prod version and @mui is ~60kb

--- a/app/package.json
+++ b/app/package.json
@@ -4,8 +4,8 @@
   "type": "module",
   "scripts": {
     "server": "node server.cjs",
-    "watch": "node esbuild.config.js",
-    "legacy": "node esbuild-legacy.config.js"
+    "watch": "node esbuild.watch.config.js",
+    "prod": "node esbuild.prod.config.js"
   },
   "main": "index.js",
   "author": "Anton Kovsharov, Evgenia Karunus",
