Move prod build setup to extension folder as it's where we build for prod

--- a/app/package.json
+++ b/app/package.json
@@ -4,8 +4,7 @@
   "type": "module",
   "scripts": {
     "server": "node server.cjs",
-    "watch": "node esbuild.watch.config.js",
-    "prod": "node esbuild.prod.config.js"
+    "watch": "node esbuild.watch.config.js"
   },
   "main": "index.js",
   "author": "Anton Kovsharov, Evgenia Karunus",
