--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@gradio/client": "^1.5.0",
     "@mui/material": "^5.15.1",
     "perfect-arrows": "^0.3.7",
     "react": "^18.2.0",
