Add a file to open

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,9 +7,16 @@
 
   "onCreateCommand": "lake exe cache get!",
 
+  "postAttachCommand": {
+    "command": "lean4.restartServer"
+  },
+
   "customizations": {
     "vscode": {
       "extensions": ["leanprover.lean4@0.0.144", "paperproof.paperproof"]
+    },
+    "codespaces": {
+      "openFiles": ["_examples/ForVideos.lean"]
     }
   }
 }
