`lake-manifest.json` - change LeanReservoir title from "examples" to "Paperproof"
(See https://github.com/leanprover/reservoir/issues/48)

--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -70,5 +70,5 @@
    "inputRev": "master",
    "inherited": false,
    "configFile": "lakefile.lean"}],
- "name": "examples",
+ "name": "Paperproof",
  "lakeDir": ".lake"}
