extension - remove excessive files

--- a/extension/package.json
+++ b/extension/package.json
@@ -60,7 +60,7 @@
         }
       }
     },
-    "icon": "./images/icon.png"
+    "icon": "./images/paper.png"
   },
   "scripts": {
     "vscode:prepublish": "yarn run build-app && yarn run package",
