codespaces - add `lake build` to avoid needing to click "Restart File"

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,7 +5,7 @@
     "dockerfile": "Dockerfile"
   },
 
-  "onCreateCommand": "lake exe cache get!",
+  "onCreateCommand": "lake exe cache get!; lake build",
 
   "customizations": {
     "vscode": {
