--- a/extension/package.json
+++ b/extension/package.json
@@ -93,23 +93,14 @@
     "build-extension": "node esbuild.js"
   },
   "devDependencies": {
-    "@types/glob": "^8.1.0",
-    "@types/mocha": "^10.0.1",
     "@types/node": "16.x",
     "@types/vscode": "^1.78.0",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
-    "@vscode/test-electron": "^2.3.0",
     "eslint": "^8.39.0",
-    "glob": "^8.1.0",
-    "mocha": "^10.2.0",
-    "ts-loader": "^9.4.2",
-    "typescript": "^5.0.4",
-    "webpack": "^5.85.0",
-    "webpack-cli": "^5.1.4"
+    "typescript": "^5.0.4"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.26.0",
     "esbuild": "^0.19.11",
     "node-fetch": "^3.3.1",
     "vscode-languageserver-protocol": "^3.17.3"
